--- a/html/index.css
+++ b/html/index.css
@@ -36,7 +36,7 @@ nav a + a {
 
 /* Table styles */
 th {
-    border: 0.5px solid #ccc;
+    border: 0.25px solid #ccc;
     padding: 8px;
     text-align: center;
     font-size: medium;
@@ -44,12 +44,19 @@ th {
 
 tr, td {
     font-size: x-small;
-    border: 0.5px solid #ccc;
+    border: 0.25px solid #ccc;
     text-align: center;
+    padding: 0;
 }
 
-.center-table{
-    align-content: center;
+/* Remove spacing between table cells */
+th, tr, td {
+    border-collapse: separate;
+    border-spacing: 0;
+}
+
+.center-table {
+    align-content: center; /* Check if 'align-content' is needed here */
 }
 
 /* Header styles */
@@ -61,7 +68,6 @@ h1 {
 /* Footer styles */
 footer {
     text-align: center;
-    
     position: fixed;
     width: 100%;
     left: 0;
@@ -85,4 +91,3 @@ div {
     height: 120px;
     margin: 2% auto;
 }
-
